@@ -1,3 +1,7 @@
+2004-07-18  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b34
+
+	* Change: Minor fix for the view_album optimizations
+
 2004-07-17  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b33
 
 	* Change: Fix pseudo-register_globals to allow login/etc on PHP5
